# csscat-py

./: .gitignore  MANIFEST.in  README.md  setup.cfg  setup.py
csscat/: __init__.py  app.py  core.cpp  core.py  csscat.py  cudacore.cu  formfactor.json  formfactor.py
examples/: 1bo.csv  1bo.tpl  1bo.xtc
include/: core.h
tests/: pytest.ini  test_core.py  test_csscat.py  test_formfactor.py
