[metadata]
name = csscat
version = attr: csscat.__version__
author = Jure Cerar
description = Python implementation of Complemented System Approach
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JureCerar/csscat-py.git
classifiers =
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Physics
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: C++
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.9
install_requires =
    numpy
    pybind11
    MDAnalysis
    tqdm

[options.extras_require]
gpu = 
    torch>=2.0

[options.entry_points]
console_scripts =
    csscat = csscat.app:main